ancapsule order detail update into a transaction minor fixes to order total and order detial total to ensure a number with 2 decimal places

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 
-DB_HOST ="localhost"
-DB_PORT = 5432
-DB_USER = "db-user-name"
-DB_PASSWORD = "example password"
-DB_DATABASE = "db name"
-SALT_ROUNDS = "salt rounds for hashing"
-JWT_SECRET = "your super secret key"
+DB_HOST = the host
+DB_PORT = db port
+DB_USERNAME = db username
+DB_PASSWORD = db Password
+DB_DATABASE = db Name
+SALT_ROUNDS = hash salt rounds;
+CLOUDINARY_CLOUD_NAME = dnum3dknp
+CLOUDINARY_API_KEY = your API key
+CLOUDINARY_API_SECRET = your API secret
+JWT_SECRET = JWT secret
