--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy to Render
 on:
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - main
 
 jobs:
-  build_and_deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'  # Specify the version of Node.js you are using
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
@@ -24,14 +24,16 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      - name: Run migrations
+        run: npm run typeorm migration:run
+
       - name: Deploy to Render
         env:
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          curl -X POST \
+          curl -X POST "https://api.render.com/v1/services/YOUR_SERVICE_ID/deploys" \
           -H "Accept: application/json" \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
-          -d '{}' \
-          https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys
+          -d '{"clearCache": false}'
+
