--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm run build
 
       - name: Run migrations
-        run: npm run typeorm migration:run
+        run: npm run migration:run
 
       - name: Deploy to Render
         env:
