--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Deploy to Render
 on:
   push:
     branches:
-      - main
+      - main # or master, depending on your default branch
 
 jobs:
-  deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,4 +33,5 @@ jobs:
           -H "Accept: application/json" \
           -H "Authorization: Bearer $RENDER_API_KEY" \
           -H "Content-Type: application/json" \
-          -d '{"clearCache": false}'
+          -d '{}' \
+          https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys
